buildscript {
    ext {
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
        classpath "io.spring.gradle:dependency-management-plugin:${dependencyManagementVersion}"
    }
	repositories {
		mavenCentral()
	}
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'mpinard'
version = '0.1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_23
    targetCompatibility = JavaVersion.VERSION_23
}

configurations {
    compile.exclude module: "slf4j-log4j12"
    compile.exclude module: "log4j"
    mockitoAgent
}

repositories {
	mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    mockitoAgent(testImplementation("org.mockito:mockito-core:${mockitoVersion}")) {
        transitive = false
    }

    compileOnly("org.projectlombok:lombok:${lombokVersion}")
    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")

    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation("com.google.guava:guava:${guavaVersion}")
    implementation("com.github.f4b6a3:uuid-creator:${uuidCreatorVersion}")

    testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
    testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation("org.assertj:assertj-core:${assertjVersion}")
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

tasks {
    test {
        jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
    }
}

